# curlit

./: .gitignore  Justfile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
curlit/: __init__.py  curl2pycurl.py
curlit/requests_api/: __init__.py  request.py  requests.py  response.py
docs/source/: conf.py  index.rst
tests/: methods_test.py  multi_usability.py  multicurl.py  usability.py
