[tool.poetry]
name = "curlit"
version = "0.1.0"
description = "Curl your HTTP!"
authors = ["Shiv Dhar <shivdhar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pycurl = "^7"

[tool.poetry.group.dev.dependencies]
icecream = "^2"
pytest = "^7.2"
requests = "^2"
black = "^24.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
